feature: recalculate pool
