# app/models/exceptions.py
@@ -55,8 +55,9 @@ endpoint_message = {
     ("GET", "/api/query/{id}/subquery/{subid}/analogs"): "Ошибка получения аналогов",
     ("POST", "/api/query/{id}/subquery/{subid}/analogs"): "Ошибка установки аналогов",
     ("POST", "/api/query/{id}/subquery/{subid}/user-analogs"): "Ошибка установки аналогов пользователя",
-    ("GET", "/api/query/{id}/subquery/{subid}/calculate-analogs"): "Ошибка расчета аналогов",
-    ("GET", "/api/query/{id}/subquery/{subid}/calculate-pool"): "Ошибка расчета пула",
+    ("POST", "/api/query/{id}/subquery/{subid}/calculate-analogs"): "Ошибка расчета аналогов",
+    ("POST", "/query/{id}/subquery/{subid}/recalculate-analogs"): "Ошибка расчета аналогов",
+    ("POST", "/api/query/{id}/subquery/{subid}/calculate-pool"): "Ошибка расчета пула",
     ("POST", "/api/query/{id}/subquery/{subid}/apartment"): "Ошибка создания квартиры",
     ("GET", "/api/query/{id}/subquery/{subid}/apartment"): "Ошибка получения всех квартир",
     ("GET", "/api/query/{id}/subquery/{subid}/apartment/{aid}"): "Ошибка получения квартиры по id",
